--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neeraj Pal</title>
     <style>
+      * {
+        overflow-x: hidden;
+      }
       body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        overflow-x: hidden;
+        width: 100%;
+        height: 100%;
       }
 
       header {
@@ -65,6 +69,13 @@
       .contact h2 {
         text-align: center;
       }
+      .contact,
+      .contact-form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
 
       .service-item {
         display: flex;
@@ -78,13 +89,13 @@
       }
 
       .contact-form {
-        max-width: 600px;
+        max-width: 100%;
         margin: 0 auto;
       }
 
       .contact-form input,
       .contact-form textarea {
-        width: 100%;
+        width: 40%;
         padding: 10px;
         margin: 10px 0;
         border: 1px solid #ccc;
@@ -116,6 +127,10 @@
 
         .service-item {
           flex-direction: column;
+        }
+        .contact-form input,
+        .contact-form textarea {
+          width: 90%;
         }
       }
     </style>
